fix "Our Values" edge case positioning issues on mobile

--- a/src/app/page-layout/page-layout.component.scss
+++ b/src/app/page-layout/page-layout.component.scss
@@ -20,6 +20,8 @@ $mobile-nav-height: 64px;
     display: none;
   }
   @include mobile {
+    font-size: 0.7rem;
+    max-height: 1rem;
     &.js {
       position: fixed;
       left: 0;
